@@ -1,0 +1,44 @@
+#!/usr/bin/make -f
+
+build clean install binary-arch binary-indep binary:
+	+dh $(opt_no_act) $@
+
+override_dh_auto_clean:
+	dh_auto_clean
+	chmod -x $(generated_executables)
+	rm -f build-aux/config.guess build-aux/config.sub
+
+override_dh_auto_configure:
+	ln -s /usr/share/misc/config.sub build-aux
+	ln -s /usr/share/misc/config.guess build-aux
+	chmod +x $(generated_executables)
+	dh_auto_configure -- --enable-dynamic $(opt_optimize) $(opt_quiet)
+
+override_dh_auto_test:
+	$(MAKE) check
+
+generated_executables = configure build-aux/compile build-aux/config.rpath \
+	build-aux/install-sh build-aux/depcomp build-aux/ltmain.sh \
+	build-aux/missing
+opt_no_act =
+opt_optimize = CFLAGS="-g -O2"
+opt_quiet =
+comma=,
+space_sep_build_opts=$(subst $(comma), ,$(DEB_BUILD_OPTIONS))
+ifneq (,$(findstring n,$(MAKEFLAGS)))
+    opt_no_act = --no-act
+endif
+ifneq (,$(filter noopt,$(space_sep_build_opts)))
+    opt_optimize = --disable-assembler CFLAGS="-g -O0"
+endif
+ifndef in_submake
+ifneq (,$(filter parallel=%,$(space_sep_build_opts)))
+    MAKEFLAGS += -j $(subst parallel=,,$(filter parallel=%,$(space_sep_build_opts)))
+endif
+endif
+ifneq (,$(filter quiet,$(space_sep_build_opts)))
+    opt_quiet = --quiet
+    MAKEFLAGS += --quiet
+endif
+in_submake = yes
+export in_submake
