@@ -2,3 +2,10 @@ xz-utils (4.999.8beta-111-g8f8ec94-1) experimental; urgency=low
 
   [ Jonathan Nieder ]
   * Initial package for Debian. (Closes: #518803)
+    + debian/rules
+      - add minimal rules file (using Debhelper 7), a control file
+        describing the binary packages, and an appropriate compat file.
+      - use configure --enable-dynamic; use up-to-date config.guess and
+        config.sub files.
+      - do not run automake and so on on autobuilders.  Instead, we can
+        run them ourselves when we build the source package.
